--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,8 @@
       server_error: 'مشکل در برقراری ارتباط با سرور',      
       success: 'شما با موفقیت ثبت شد',
       error: 'مشکلی برای ثبت  شما به ایجاد شد',
-      too_large: 'سایز عکس زیاد'
+      too_large: 'سایز عکس زیاد',
+      server_error: 'مشکلی برای ثبت  شما به ایجاد شد',      
     }
     
     var settingsCreatePlaces = {
@@ -60,7 +61,16 @@
 
     var settings_planner = {
       destinations_url: 'http://visitiran.ir/fa/api/trips/destinations/',
-      destinations_create_url: 'http://visitiran.ir/fa/api/trips/',
+      destinations_create_url: 'http://visitiran.ir/fa/api/trips/calculate/',
+      dropdown_no_result_header: 'بدون نتیجه',
+      dropdown_no_result_description: 'جستجوی شما مقداری نداشت.',
+      empty_form: 'تمام اطلاعات رو پر نمایید',
+      success_post: 'با موفقیت فرستاده شد',
+      start_date_text: 'تاریخ شروع',
+      end_date_text: 'تاریخ پایان',
+      no_trips_yet: 'شما سفری ذخیره نکرده اید، لطفآ سفر جدید بسازید',
+      no_of_trips_text: 'تعداد سفر های شما: ',
+      welcome_message: 'لیست سفر های شما'
     }
 
   </script>
