--- a/assets/css/pages/_authentication.scss
+++ b/assets/css/pages/_authentication.scss
@@ -1,13 +1,17 @@
 $auth_input_bg: #959393;
 $auth_input_bg_focused: lightgray;
-.hidden  {
+.hidden {
   display: none !important;
 }
+
 .center-wrapper {
+  &.column {
+    flex-direction: column;
+  }
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 566px;    
+  min-height: 566px;
   .form {
     width: 302px;
     padding: 50px 0;
@@ -23,20 +27,16 @@ $auth_input_bg_focused: lightgray;
     .row {
       padding: 10px 0;
       box-sizing: border-box;
-
       &.bold {
         font-weight: 700;
       }
-
       &.center {
         text-align: center;
       }
-
       label {
         font-size: 12px;
         padding: 0 5px;
       }
-
       .input {
         margin: 5px 0;
         background: $white;
@@ -50,15 +50,14 @@ $auth_input_bg_focused: lightgray;
           border: 2px solid #00a594;
           outline: 0 none;
         }
-
-        &.error-border  {
+        &.error-border {
           border: 2px solid red;
           color: black;
         }
-      }      
+      }
       .error {
         font-size: 12px;
-        color: red;   
+        color: red;
         list-style: disc;
         line-height: 24px;
       }
@@ -68,7 +67,7 @@ $auth_input_bg_focused: lightgray;
         color: white;
         padding: 0;
         height: 34px;
-        border-radius: 4px;        
+        border-radius: 4px;
         &:disabled {
           background: #e7e7e7;
         }
@@ -87,7 +86,6 @@ $auth_input_bg_focused: lightgray;
         }
       }
     }
-
     &.bordered {
       width: 400px;
       border: 1px solid #959393;
@@ -96,7 +94,6 @@ $auth_input_bg_focused: lightgray;
       flex-wrap: wrap;
       margin: 50px 20px;
     }
-
     .right {
       flex: 1;
       img {
@@ -128,8 +125,7 @@ $auth_input_bg_focused: lightgray;
       padding: 50px 0;
       &.bordered {
         width: 400px;
-      }
-      // #rc-imageselect,
+      } // #rc-imageselect,
       // .g-recaptcha {
       //   transform: scale(0.77);
       //   -webkit-transform: scale(0.77);
@@ -139,4 +135,3 @@ $auth_input_bg_focused: lightgray;
     }
   }
 }
-
