--- a/_layouts/base_trip.html
+++ b/_layouts/base_trip.html
@@ -11,54 +11,6 @@
   <link rel="apple-touch-icon" sizes="114x114" href="{{side.baseurl}}/assets/images/touch-icon.jpg">  
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
   <script>
-    var settings = {
-      lang: 'fa',
-      register_url: 'http://visitiran.ir/fa/api/users/',
-      login_url: 'http://visitiran.ir/fa/api/users/login/',
-      login_url_token: 'http://visitiran.ir/fa/api/users/login/',
-      error_server_connection: 'خطا در ایجاد برقراری ارتباط با سرور',
-      error_no_email: 'ایمیل خود را وارد نمایید',
-      error_no_verification_code: 'لطفآ کد ارسال شده را وارد نمایید',
-      login_return_url: '/fa/',
-      logout_url: '/fa/logout/'
-    }
-
-    var settings_comments_province = {      
-      url: 'http://visitiran.ir/fa/api/reviews/?basetourismobject=998',     
-      error_empty_form: 'لطفآ امتیاز و متن را وارد کنید',
-      is_logged_in: false,
-      success: 'کامنت شما با موفقیت ثبت شد',
-      error: 'مشکلی برای ثبت کمانت شما به ایجاد شد'
-
-    }
-
-    var settings_profile = {      
-      get_me_url: 'http://visitiran.ir/fa/api/users/get_me/',     
-      // edit_url: 'http://visitiran.ir/fa/api/users/701/',
-      edit_url: 'http://visitiran.ir/fa/api/users/update_me/',
-      server_error: 'مشکل در برقراری ارتباط با سرور',      
-      success: 'شما با موفقیت ثبت شد',
-      error: 'مشکلی برای ثبت  شما به ایجاد شد',
-      too_large: 'سایز عکس زیاد',
-      server_error: 'مشکلی برای ثبت  شما به ایجاد شد',      
-    }
-    
-    var settingsCreatePlaces = {
-      name: 'نام را پور کنید',
-      address: 'آدرس را پور کنید',
-      intro: 'توضیحات پر کن',
-      lat: 'محل را روی نقشه انتاخاب کنید',
-      lng: 'محل را روی نقشه انتاخاب کنید',
-      image: 'حداقل ی عکس',
-      url: 'http://visitiran.ir/fa/api/places/',
-      return_url: 'image-upload-done.html',
-      success: 'موفق',
-      not_image: 'لطفآ عکس اپلود کنید',
-      too_large: 'سایز عکس زیاد',
-      too_many: 'زیاد عکس',
-      error_server_connection: 'خطا در ایجاد برقراری ارتباط با سرور',
-    }
-
     var settings_planner = {
       destinations_url: 'http://visitiran.ir/fa/api/trips/destinations/',
       destinations_create_url: 'http://visitiran.ir/fa/api/trips/calculate/',
@@ -70,7 +22,7 @@
       end_date_text: 'تاریخ پایان',
       no_trips_yet: 'شما سفری ذخیره نکرده اید، لطفآ سفر جدید بسازید',
       no_of_trips_text: 'تعداد سفر های شما: ',
-      welcome_message: 'لیست سفر های شما',
+      trip_count: 'برنامه های من',
       start_time: 'تاریخ حرکت',
       arrival_time: 'تاریخ ورود',
       leaving_time: 'تاریخ حرکت',
@@ -94,7 +46,7 @@
 
   <body>
 
-    {% include header.html %} {{content}} {% include footer.html %}
+    {% include trip_header.html %} {{content}} {% include footer.html %}
 
     <script  src="http://code.jquery.com/jquery-3.3.1.min.js"  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- <script src="{{site.baseurl}}/assets/js/jquery.min.js" type="text/javascript"></script>     -->
