--- a/assets/css/pages/_tripPlanner.scss
+++ b/assets/css/pages/_tripPlanner.scss
@@ -1,5 +1,6 @@
 .center-wrapper.column.top {
     justify-content: start;
+    min-height: 633px;
     .trips {
         margin-top: 10px;
         width: 100%;
@@ -40,7 +41,156 @@
         .new-trip-button {
             color: $main;
             font-size: 20px;
-            font-weight: 500; 
+            font-weight: 500;
+        }
+    }
+    &.tabs {
+        .image {
+            width: 100%;
+            position: relative;
+            height: 300px;
+            background: $main;
+            img {
+                width: 100%;
+                height: 300px;
+            }
+            .text {
+                text-align: center;
+                position: absolute;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                color: white;
+                background-color: rgba(0, 0, 0, 0.6);
+                width: 100%;
+                padding: 30px 0;
+                top: 50%;
+                width: 100%;
+                @media (min-width: 900px) {
+                    padding: 30px;
+                    width: auto;
+                }
+                .top {
+                    font-size: 30px;
+                    margin-bottom: 32px;
+                }
+                .bottom {
+                    font-size: 14px;
+                }
+            }
+        }
+        .timeline-container {
+            display: flex;
+            margin-bottom: 50px;
+            flex-direction: column;
+            @media (min-width: 900px) {
+                flex-direction: row;
+            }
+            .row.map {
+                flex: 1;
+                display: flex;
+                @media (min-width: 900px) {
+                    margin: 0 10px 0 0;
+                }
+                @media (min-width: 1100px) {
+                    margin: 0 25px 0 0;
+                }
+                #mapcontainer {
+                    width: 400px;
+                    height: 400px;
+                    // @media (min-width: 400px) {
+                    //     width: 400px;                        
+                    // }
+                    @media (min-width: 500px) {
+                        width: 500px;                        
+                    }
+                    @media (min-width: 768px) {
+                        width: 900px;                        
+                    }
+                    
+                    @media (min-width: 900px) {
+                        width: 550px;                        
+                    }                
+                }
+                #map {
+                    padding-top: 10px;
+                    @media (min-width: 900px) {
+                        padding: 0;
+                    }
+                    display: flex;
+                    justify-content: center;
+                    box-sizing: border-box;
+                    direction: initial;                    
+                    overflow: hidden;
+                }
+            }
+            .row.direction {
+                display: flex;
+                flex: 2;
+                flex-direction: column;
+                box-sizing: border-box;
+                @media (min-width: 1100px) {
+                    margin-left: 25px;
+                }
+                .raised {
+                    width: 100%;
+                    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+                    padding: 20px;
+                    @media (min-width: 1100px) {
+                        padding: 20px 120px 20px 40px;
+                    }
+                    box-sizing: border-box;
+                    .title {
+                        font-size: 20px;
+                        @media (min-width: 1100px) {
+                            font-size: 24px;
+                        }
+                        font-weight: 700;
+                        line-height: 30px;
+                        display: flex;
+                        justify-content: space-between;
+                    }
+                    .subtitle {
+                        margin-top: 10px;
+                        font-size: 14px;
+                        @media (min-width: 900px) {
+                            font-size: 16px;
+                        }
+                    }
+                }
+                .data {
+                    height: 90px;
+                    display: flex;
+                    .logo {
+                        border-left: 1px solid $dark-bg;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        flex: 0 0 80px;
+                        @media (min-width: 900px) {
+                            flex: 0 0 120px;
+                        }
+                        box-sizing: border-box;
+                    }
+                    .detail {
+                        display: flex;
+                        flex: 1;
+                        flex-direction: column;
+                        box-sizing: border-box;
+                        padding: 20px;
+                        @media (min-width: 900px) {
+                            padding: 20px 50px;
+                        }
+                        .text {
+                            margin-bottom: 15px;
+                            font-weight: 500;
+                            font-size: 12px;
+                            @media (min-width: 900px) {
+                                font-size: 16px;
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
